<resources>
    <string name="app_name">Package Tracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="user_head">User Head</string>
    <string name="send_package">Send package</string>
    <string name="receive_package">Receive package</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_main_tutorial">Enable tutorial</string>
    <string name="pref_description_main_tutorial">Show a tutorial at activity start</string>

    <string name="pref_title_page_size">Page size</string>
    <string name="pref_default_page_size" translatable="false">20</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
    <item>15 minutes</item>
    <item>30 minutes</item>
    <item>1 hour</item>
    <item>3 hours</item>
    <item>6 hours</item>
    <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
    <item>15</item>
    <item>30</item>
    <item>60</item>
    <item>180</item>
    <item>360</item>
    <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
    <item>Entry 1</item>
    <item>Entry 2</item>
    <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
    <item>1</item>
    <item>2</item>
    <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_detail">Track Detail</string>
    <string name="title_activity_package_state">Package state</string>
    <string name="package_number">Package number</string>
    <string name="button_take_picture">Scan QR code</string>
    <string name="button_add">Add</string>
    <string name="title_activity_add_new">Add new track</string>
    <string name="title_activity_send_new">Send New Package</string>
    <string name="company_logo">Company logo</string>
    <string name="wrong_package_number">Invalid package number</string>
    <string name="empty_package_number">Empty package number</string>
    <string name="search_hint">Search package</string>
    <string name="find_network">Find network</string>
    <string name="send_address">Send address</string>
    <string name="receive_address">Receive address</string>
    <string name="send_weight">Package weight (default set to 1kg)</string>
    <string name="button_confirm">Confirm</string>
    <string name="search_price">Search price</string>
    <string name="search_time">Search time</string><string name="go_setting">Setting</string><string name="please_choose">Please choose</string><string name="send_province">Send Province</string><string name="send_city">Send City</string><string name="send_area">Send Area</string><string name="receive_area">Receive area</string><string name="receive_city">Receive city</string><string name="receive_province">Receive province</string><string name="company_name">Company name</string><string name="express_type">Express type</string><string name="search_courier">Search courier</string><string name="area">Area</string><string name="title_activity_network_search">Search around</string><string name="work_area">Working area</string><string name="courier_header">Courier photo</string><string name="courier_name">Name</string><string name="undo">Undo</string><string name="item_has_been_removed">%1$s has benn removed</string><string name="item_not_found">404 not Found</string><string name="add_new">Add new one</string><string name="time">Time</string><string name="telephone">Phone number</string><string name="site_name">Site name</string><string name="search_network">Search network</string><string name="province">Province</string><string name="price">Price</string><string name="launch_taobao">Launch Taobao</string><string name="hint_street">Type street name etc.</string><string name="city">City</string><string name="buy_buy_buy">Launch Taobao</string><string name="address">Address</string><string name="pref_description_page_size">How many items per search</string><string name="pref_description_send_tutorial">Show a tutorial on send activity</string><string name="pref_title_send_tutorial">Enable tutorial when send</string><string name="pref_title_search_tutorial">Enable tutorial when search</string><string name="pref_description_search_tutorial">Show a tutorial on search activity</string><string name="help_main_tutorial_drawer">This is \"navigation drawer\".</string><string name="help_main_tutorial_fab">This is \"floating action button\", many buttons you can choose in it.</string><string name="empty">empty</string><string name="make_call">Make call</string><string name="network_error">NETWORK ERROR</string><string name="copy_text">Copy to clipboard</string><string name="separator">separator</string><string name="help_desc_tutorial_fab">Auto-located when application launched.</string><string name="error_need_receive_address">Need to specified receieved place FIRST!</string><string name="help_finish_send_tutorial">Finish send tutorial</string><string name="help_finish_main_tutorial">Finish your first tutorial</string><string name="help_send_tutorial_time">A button for comparing delieve time</string><string name="help_desc_send_tutorial_time">Fetch delieve time among different companies, make your package arrived as soon as possible!</string><string name="help_search_tutorial_courier">A cute button which gets couriers around.</string><string name="help_desc_search_tutorial_network">Fetch network around specified place, try to type some landmark!</string><string name="help_desc_search_tutorial_courier">Help you fetch couriers around you, click phone number could make a call to them!</string><string name="send_tutorial_switch">send_tutorial_switch</string><string name="search_tutorial_switch">search_tutorial_switch</string><string name="main_tutorial_switch" translatable="false">main_tutorial_switch</string><string name="help_desc_main_tutorial_drawer">You can also open it by right sweep.</string><string name="help_skip_main_tutorial">Skip main tutorial</string><string name="help_send_tutorial_price">The button for comparing price.</string><string name="help_skip_send_tutorial">Skip send tutorial</string><string name="help_desc_send_tutorial_price">Comparing price between different companies, help you to make choice.</string><string name="help_search_tutorial_network">Button to get network around.</string><string name="help_tutorial_fab">This little button refresh your current location.</string>
        <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string><string name="username">Username</string><string name="email_address">Email Address</string><string name="action_about">About</string><string name="page_size">page_size</string><string name="action_sign_up">Sign up</string><string name="pref_default_login_server">192.168.1.100</string><string name="login_server">登录服务器</string><string name="pref_description_login_server">登入服务器IP地址</string><string name="pref_title_login_server">登入服务器</string>
</resources>
