<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/main_tutorial_switch"
        android:summary="@string/pref_description_main_tutorial"
        android:title="@string/pref_title_main_tutorial" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/send_tutorial_switch"
        android:summary="@string/pref_description_send_tutorial"
        android:title="@string/pref_title_send_tutorial" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/search_tutorial_switch"
        android:summary="@string/pref_description_search_tutorial"
        android:title="@string/pref_title_search_tutorial" />
    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_page_size"
        android:inputType="number"
        android:key="@string/page_size"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/pref_description_page_size"
        android:title="@string/pref_title_page_size" />
        <EditTextPreference
            android:defaultValue="@string/pref_default_login_server"
            android:key="@string/login_server"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/pref_description_login_server"
            android:title="@string/pref_title_login_server" />


    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
           dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--<ListPreference-->
    <!--android:defaultValue="-1"-->
    <!--android:entries="@array/pref_example_list_titles"-->
    <!--android:entryValues="@array/pref_example_list_values"-->
    <!--android:key="example_list"-->
    <!--android:negativeButtonText="@null"-->
    <!--android:positiveButtonText="@null"-->
    <!--android:title="@string/pref_title_add_friends_to_messages" />-->

</PreferenceScreen>
