<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <!--头像-->
    <ImageView
        android:id="@+id/nav_user_head_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/user_head"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <!--用户名-->
    <TextView
        android:id="@+id/nav_username_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/username"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textIsSelectable="true"
        android:textStyle="normal|bold" />

    <!--邮箱地址-->
    <TextView
        android:id="@+id/nav_user_email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textIsSelectable="true" />
</LinearLayout>
