<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:translationZ="@dimen/cardview_default_elevation"
    grid:contentPadding="@dimen/default_gap">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/default_gap"
            android:layout_marginRight="@dimen/default_gap"
            android:contentDescription="@string/company_logo"
            android:maxWidth="200dp"
            android:minWidth="60dp"
            android:scaleType="fitCenter"
            grid:srcCompat="@drawable/image_placeholder" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|end"
            android:gravity="center_vertical|end"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/company_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:text="@string/company_name"
                    tools:text="@string/company_name" />
                <TextView
                    android:id="@+id/price"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:gravity="center_vertical|end"
                    android:lines="1"
                    android:text="@string/price"
                    tools:text="@string/price" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/express_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/express_type"
                    tools:text="@string/express_type" />
                <TextView
                    android:id="@+id/phone_number"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:gravity="center_vertical|end"
                    android:text="@string/telephone"
                    tools:text="@string/telephone" />
        </LinearLayout>
    </LinearLayout></LinearLayout>
</android.support.v7.widget.CardView>
