<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.enihsyou.shane.packagetracker.activity.SearchNetworkActivity">

    <LinearLayout
        android:id="@+id/new_card_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
            <!--添加追踪信息用的卡片-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_gap"
            android:focusableInTouchMode="true"
            android:translationZ="@dimen/cardview_default_elevation">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">
                    <!--上面寄件地址-->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/send_address" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/btn_province_send"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:lines="1"
                            android:text="@string/province" />
                        <Button
                            android:id="@+id/btn_city_send"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:lines="1"
                            android:text="@string/city" />
                        <Button
                            android:id="@+id/btn_area_send"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:lines="1"
                            android:text="@string/area" />
                    </LinearLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="false">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/ipt_street"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/hint_street"
                            android:imeOptions="actionDone"
                            android:inputType="text"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>

                    <!--最下面两个按钮-->
                    <LinearLayout
                        style="?android:attr/buttonBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/btn_search_network"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/search_network" />
                        <Button
                            android:id="@+id/btn_search_courier"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/search_courier" />
                    </LinearLayout>
                </LinearLayout>
             </android.support.v7.widget.CardView>

        <ListView
            android:id="@+id/entry_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@android:color/transparent"
            android:dividerHeight="@dimen/default_gap">

        </ListView>
        <!--<ExpandableListView-->
        <!--android:id="@+id/sub_list"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="@dimen/keyline_1_minus_8dp"-->
        <!--android:animateLayoutChanges="true">-->
        <!--&lt;!&ndash;由程序添加搜索结果&ndash;&gt;-->

        <!--</ExpandableListView>-->
    </LinearLayout>

<android.support.design.widget.FloatingActionButton
    android:id="@+id/fab_location"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
    android:layout_margin="@dimen/fab_margin"
    android:translationZ="@dimen/fab_translation_z"
    app:srcCompat="@drawable/ic_my_location" />
</android.support.design.widget.CoordinatorLayout>

