<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:translationZ="@dimen/cardview_default_elevation"
    grid:contentPadding="@dimen/default_gap"
    grid:layout_columnWeight="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/default_gap"
            android:layout_marginRight="@dimen/default_gap"
            android:contentDescription="@string/company_logo"
            android:maxWidth="40dp"
            android:minHeight="30dp"
            android:scaleType="fitCenter"
            grid:srcCompat="@drawable/image_placeholder" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/company_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:text="@string/company_name"
                    tools:text="@string/company_name" />
                <TextView
                    android:id="@+id/time"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:gravity="center_vertical|end"
                    android:lines="1"
                    android:text="@string/time"
                    tools:text="@string/time" />
            </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
